# events

./: README.md  app.py  config.py  pyproject.toml  schemas.py
alembic/: alembic.ini
app/: __init__.py  schemas.py
app/models/: __init__.py  attendees.py  event.py  user.py
app/routes/: __init__.py  auth.py  event_route.py  user_route.py
models/: __init__.py  attendees.py  audience_member.py  event.py  genre.py  language.py  performance.py  play.py  play_genre.py  play_language.py  theatre.py  ticket.py  user.py
tests/: auth_test.py  conftest.py  event_test.py  users_test.py
