[tool.poetry]
name = "delete"
version = "0.1.0"
description = ""
authors = ["Andrii <andriymyrosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.20.1"
flask-jwt-extended = "^4.5.3"
passlib = "^1.7.4"
pip = "^23.3.1"
install = "^1.3.5"
flask-migrate = "^4.0.5"
pytest = "^7.4.3"
pytest-flask = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
